hphp/test/slow/closure/invalid-class-name.hhas.expectf
Fatal error: Assembler Error: line 1: anonymous class and closure names may not contain a semicolon in hhas in %s/invalid-class-name.hhas on line -1
